# corey

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  code-coverage-results.md  coverage.json
.github/workflows/: cmake-single-platform.yml
cmake/: CodeCoverage.cmake
lib/: CMakeLists.txt  common.hh  corey.cc  corey.hh
lib/common/: CMakeLists.txt  console.cc  console.hh  defer.hh  macro.hh  sink.cc  sink.hh
lib/reactor/: CMakeLists.txt  coroutine.hh  future.hh  reactor.cc  reactor.hh  signal.cc  signal.hh  sync.cc  sync.hh  task.cc  task.hh  timer.cc  timer.hh  when.hh
lib/reactor/io/: CMakeLists.txt  file.cc  file.hh  io.cc  io.hh  socket.cc  socket.hh
lib/utils/: CMakeLists.txt  common.hh  log.cc  log.hh
src/: CMakeLists.txt  demo-cp.cc  demo-echo.cc  demo-http-parse.cc  demo-http-parse.hh  demo-http.cc  demo.cc
tests/: CMakeLists.txt  test_app.cc  test_base.cc  test_defer.cc  test_future_promise.cc  test_log.cc  test_reactor.cc  test_signal.cc  test_socket.cc  test_sync.cc  test_task.cc
